# VSHC

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug-reports.yml
.github/workflows/: publish.yml
docs/: development-guide.md  doc-strings.md
src/vshc/database/: __init__.py  utils.py
src/vshc/decorator/: timing.py
src/vshc/file/: __init__.py  text_files.py
tests/: test_database.py  test_decorator.py  test_file.py
