[project]
name = "vshc"
version = "0.1.0"
description = "Veicm's Simple Helper Collection"
authors = [{ name = "Veicm" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "mypy>=1.5.0", "ruff>=0.4.0", "pre-commit>=3.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
